; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemdisp/extr_locator.c_get_object_count.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemdisp/extr_locator.c_get_object_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WBEM_INFINITE = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @get_object_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_object_count(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %3, align 8
  br label %4

4:                                                ; preds = %10, %1
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @WBEM_INFINITE, align 4
  %7 = call i64 @IEnumWbemClassObject_Skip(i32* %5, i32 %6, i32 1)
  %8 = load i64, i64* @S_OK, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %4
  %11 = load i64, i64* %3, align 8
  %12 = add nsw i64 %11, 1
  store i64 %12, i64* %3, align 8
  br label %4

13:                                               ; preds = %4
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @IEnumWbemClassObject_Reset(i32* %14)
  %16 = load i64, i64* %3, align 8
  ret i64 %16
}

declare dso_local i64 @IEnumWbemClassObject_Skip(i32*, i32, i32) #1

declare dso_local i32 @IEnumWbemClassObject_Reset(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
